<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.weatherapp.ui.mainScreen.MainScreenViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">

        <TextView
            android:id="@+id/locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Locality"
            android:text="@{viewModel.locality}"
            tools:text="Якутск"/>

        <ImageView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/search_image"
            android:src="@drawable/ic_search_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/locality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locality">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.mainScreen.MainScreenFragment">

                <TextView
                    android:id="@+id/temperature"
                    style="@style/Temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:temperatureText="@{viewModel.temperature}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="10°"/>

                <TextView
                    android:id="@+id/description"
                    style="@style/AppBaseStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{viewModel.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temperature"
                    tools:text="Ясно" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/weather_image"
                    app:weatherImage="@{viewModel.weatherImageResource}"
                    app:layout_constraintBottom_toTopOf="@+id/hourlyForecast"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/temperature"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/sun_v2" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hourlyForecast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    tools:listitem="@layout/hourly_weather_layout"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dailyForecast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hourlyForecast"
                    tools:itemCount="7"
                    tools:listitem="@layout/daily_info">

                </androidx.recyclerview.widget.RecyclerView>

                <ImageView
                    android:id="@+id/humidity_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/humidity_image"
                    android:src="@drawable/drop3"
                    app:layout_constraintBottom_toBottomOf="@+id/uv_image"
                    app:layout_constraintEnd_toStartOf="@+id/uv_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/uv_image" />

                <TextView
                    android:id="@+id/humidity"
                    style="@style/AppBaseStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:humidityText="@{viewModel.humidity}"
                    app:layout_constraintEnd_toEndOf="@+id/humidity_image"
                    app:layout_constraintStart_toStartOf="@+id/humidity_image"
                    app:layout_constraintTop_toBottomOf="@+id/humidity_image"
                    tools:text="100%" />

                <ImageView
                    android:id="@+id/uv_image"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/uv_image"
                    android:src="@drawable/uv_solid"
                    app:layout_constraintEnd_toStartOf="@+id/wind_image"
                    app:layout_constraintStart_toEndOf="@+id/humidity_image"
                    app:layout_constraintTop_toBottomOf="@+id/dailyForecast" />

                <TextView
                    android:id="@+id/ultra_violet"
                    style="@style/AppBaseStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.ultraViolet}"
                    app:layout_constraintEnd_toEndOf="@+id/uv_image"
                    app:layout_constraintStart_toStartOf="@+id/uv_image"
                    app:layout_constraintTop_toBottomOf="@+id/uv_image"
                    tools:text="Нормально" />

                <ImageView
                    android:id="@+id/wind_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/wind_image"
                    android:src="@drawable/wind"
                    app:layout_constraintBottom_toBottomOf="@+id/uv_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/uv_image"
                    app:layout_constraintTop_toTopOf="@+id/uv_image" />

                <TextView
                    android:id="@+id/wind"
                    style="@style/AppBaseStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/wind_image"
                    app:layout_constraintStart_toStartOf="@+id/wind_image"
                    app:layout_constraintTop_toBottomOf="@+id/wind_image"
                    app:windText="@{viewModel.wind}"
                    tools:text="5 м/с" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>